# build/swagger.yaml
@@ -108,6 +108,33 @@ paths:
           description: NOT_FOUND
         '500':
           description: SERVER_ERROR
+  /user/login:
+    post:
+      requestBody:
+        description: '로그인 타입이 None일 경우 id가 제공되어야 하고, 그 외에는 externalId가 제공되어야 합니다.'
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nickname:
+                  type: string
+                loginType:
+                  type: string
+      tags:
+        - User
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: BAD_REQUEST
+        '401':
+          description: FAILED_TO_ATHORIZE
+        '404':
+          description: NOT_FOUND
+        '500':
+          description: SERVER_ERROR
   /articles:
     get:
       tags:
@@ -224,7 +251,7 @@ definitions:
           - GOOGLE
           - APPLE
       externalId:
-        type: number
+        type: string
       nickname:
         type: string
       gender:
@@ -235,7 +262,7 @@ definitions:
         type: string
       phoneNumber:
         type: string
-      profileImg:
+      profileImage:
         type: string
       ageRange:
         type: string
